--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -104,7 +104,7 @@
                 <label>密码</label>
                     <input type="password" class="form-controlspan12 form-control">
                 </div>
-                <a href="member.html" class="btn btn-primary pull-right">登录</a>
+                <a href="member.html" class="btn btn-primary pull-right" onclick='alert("登陆成功")'>登录</a>
                 <label class="remember-me"><input type="checkbox"> 记住我</label>
                 <div class="clearfix"></div>
             </form>
