--- a/src/meeting.html
+++ b/src/meeting.html
@@ -66,7 +66,7 @@
         </div>
         <div class="grid_12" style="margin-top:-20px">
             <ul class="nav main">
-				<li class="ic-dashboard"><a href="meeting.html"><span>会员管理</span></a> </li>
+				<li class="ic-dashboard"><a href="member.html"><span>会员管理</span></a> </li>
                 <li class="ic-form-style"><a href="document.html"><span>省级学会公文收发系统</span></a></li>
                 <li class="ic-grid-tables"><a href="meeting.html"><span>会议会务管理</span></a></li>
             </ul>
