--- a/src/member.html
+++ b/src/member.html
@@ -27,6 +27,7 @@
     <script language="javascript" type="text/javascript" src="js/jqPlot/plugins/jqplot.categoryAxisRenderer.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/jqPlot/plugins/jqplot.highlighter.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/jqPlot/plugins/jqplot.pointLabels.min.js"></script>
+    <script language="javascript" type="text/javascript" src="js/navigation.js"></script>
     <!-- END: load jqplot -->
     <script src="js/setup.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -81,13 +82,10 @@
 						
                         <li class='navL' category='member'><a class="menuitem">会员库</a>
                             <ul class="submenu">
-                                <li><a>学会架构图</a> </li>
-                                <li><a>会员查询</a> </li>
+                                <li><a onclick="navigate('architecture')">学会架构图</a> </li>
+                                <li><a onclick="navigate('mList')">会员查询</a> </li>
                                 <li><a>会员信息</a> </li>
-                                <li><a>添加会员</a> </li>
-                                <li><a>会员信息导出</a> </li>
                                 <li><a>会员信息统计</a> </li>
-                                <li><a>添加会员</a> </li>
                                 <li><a>会员信息修改</a> </li>
                                 <li><a>会员审核</a> </li>
                             </ul>
@@ -102,10 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="grid_10">
-            <div class="box round first">
-                djaksdjfkaj 
-            </div>
+        <div class="grid_10" id="pageContent" >
         </div>
         <div class="clear">
         </div>
