member manage finished
remain member analysis

--- a/src/member.html
+++ b/src/member.html
@@ -83,17 +83,15 @@
                         <li class='navL' category='member'><a class="menuitem">会员库</a>
                             <ul class="submenu">
                                 <li><a onclick="navigate('architecture')">学会架构图</a> </li>
-                                <li><a onclick="navigate('mList')">会员查询</a> </li>
-                                <li><a>会员信息</a> </li>
+                                <li><a onclick="navigate('mList')">会员管理</a> </li>
                                 <li><a>会员信息统计</a> </li>
-                                <li><a>会员信息修改</a> </li>
-                                <li><a>会员审核</a> </li>
+                                <li><a onclick="navigate('memberReviewed')">会员审核</a> </li>
                             </ul>
                         </li>
                         <li class='navL' category='member'><a class="menuitem">我的详情</a>
                             <ul class="submenu">
-                                <li><a>我的信息</a> </li>
-                                <li><a>修改密码</a> </li>
+                                <li><a onclick="navigate('myDetail')">我的信息</a> </li>
+                                <li><a onclick="navigate('resetPassword')">修改密码</a> </li>
                             </ul>
                         </li>
                     </ul>
