--- a/src/memberMgr/myDetail.html
+++ b/src/memberMgr/myDetail.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-  <h1>会员信息</h1>
+  <h1>我的详情</h1>
 			<div class="grid_12">
 				<div class="box round first fullpage">
 					<div class="block ">
@@ -17,7 +17,7 @@
 										会员编码</label>
 								</td>
 								<td class="col2">
-									<input type="text" id="mcode">
+									<input type="text" id="mcode" value='000'>
 								</td>
 							</tr>
 							<tr>
@@ -26,7 +26,7 @@
 										姓名</label>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" value="admin">
 								</td>
 							</tr>
 							<tr>
@@ -35,7 +35,7 @@
 										联系电话</label>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" value="13444444444">
 								</td>
 							</tr>
 							<tr>
@@ -44,43 +44,7 @@
 										性别</label>
 								</td>
 								<td>
-									<input type="radio" value='男' text="男"/>男<input type="radio" value='女' />女
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<label>
-										职称</label>
-								</td>
-								<td>
-									<input type="text">
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<label>
-										生日</label>
-								</td>
-								<td>
-									<input type="text">
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<label>
-										学历</label>
-								</td>
-								<td>
-									<input type="text">
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<label>
-										在学会形式</label>
-								</td>
-								<td>
-									<input type="text">
+									<input type="radio" value='男' text="男" checked=true/>男<input type="radio" value='女' />女
 								</td>
 							</tr>
 							<tr>
@@ -89,7 +53,7 @@
 										学会职务</label>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" value="无">
 								</td>
 							</tr>
 							<tr>
@@ -98,7 +62,7 @@
 										学会</label>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" value="省电力学会">
 								</td>
 							</tr>
 							<tr>
@@ -107,7 +71,7 @@
 										学会群</label>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" value="理工1组">
 								</td>
 							</tr>
 							<tr>
@@ -116,7 +80,7 @@
 										学会分支</label>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" value="学会分支1">
 								</td>
 							</tr>
 							<tr>
@@ -125,13 +89,13 @@
 										家庭住址</label>
 								</td>
 								<td>
-									<input type="text" class="large">
+									<input type="text" class="large" value="杭州滨江">
 								</td>
 							</tr>
 							
 						</tbody></table>
 						</form>
-						<button class="btn-icon btn-blue btn-check"><span></span>添加</button>
+						<button class="btn-icon btn-blue btn-check"><span></span>确认修改</button>
 					</div>
 				</div>
 			</div>
