--- a/src/memberMgr/memberReviewed.html
+++ b/src/memberMgr/memberReviewed.html
@@ -68,10 +68,7 @@
       <div class="block">
         <div class="dataTables_wrapper" id="example_wrapper">
           <div id="example_length" class="dataTables_length">
-            <button id="btnAddMember" class="btn-icon btn-teal btn-person"><span></span>添加会员</button> 
-			<button id="btnDelMember" class="btn-icon btn-teal btn-minus" style="margin-left:10px"><span></span>删除会员</button> 
-			<button id="btnModifyMember" class="btn-icon btn-teal btn-refresh" style="margin-left:10px"><span></span>修改会员</button> 
-			<button id="btnExportMemberList" class="btn btn-yellow" style="margin-left:10px"><span></span>导出Excel</button>
+            <button id="pass" class="btn-icon btn-teal btn-person"><span></span>审核通过</button> 
           </div>
 
           <table class="data display" id="example">
@@ -88,6 +85,8 @@
                 <th class="sorting" rowspan="1" colspan="1" style="width: 264px;">学会群</th>
 
                 <th class="sorting" rowspan="1" colspan="1" style="width: 258px;">学会分支</th>
+				
+                <th class="sorting" rowspan="1" colspan="1" style="width: 258px;">状态</th>
               </tr>
             </thead>
 
@@ -104,6 +103,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
 
               <tr class="gradeA odd dataTableRow">
@@ -118,6 +118,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">未审核</th>
               </tr>
 
               <tr class="gradeA even dataTableRow">
@@ -132,6 +133,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">未审核</th>
               </tr>
 
               <tr class="gradeA odd dataTableRow">
@@ -146,6 +148,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
 
               <tr class="gradeA even dataTableRow">
@@ -160,6 +163,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
 
               <tr class="gradeA even dataTableRow">
@@ -174,6 +178,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
 
               <tr class="gradeA odd dataTableRow">
@@ -188,6 +193,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
 
               <tr class="gradeA even dataTableRow">
@@ -202,6 +208,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
 
               <tr class="gradeA odd dataTableRow">
@@ -216,6 +223,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
 
               <tr class="gradeA even dataTableRow">
@@ -230,6 +238,7 @@
                 <th class="left" rowspan="1" colspan="1">技术研发群</th>
 
                 <th class="left" rowspan="1" colspan="1">分支1</th>
+                <th class="left" rowspan="1" colspan="1">已审核</th>
               </tr>
             </tbody>
           </table>
