--- a/src/documentMgr/recieveBoxNotRead.html
+++ b/src/documentMgr/recieveBoxNotRead.html
@@ -53,19 +53,18 @@
   <script src="../js/setup.js" type="text/javascript">
 </script>
   <script type="text/javascript">
- 
 </script>
 </head>
 
 <body>
   <div class="grid_10">
     <div class="box round first grid">
-      <h2 id="dTitle">公文收件箱</h2>
+      <h2 id="dTitle">未读公文</h2>
 
       <div class="block">
 			<div id="example_length" class="dataTables_length">
-            <button id="btnAddDoc" class="btn-icon btn-orange btn-star"><span></span>公文归档</button> 
-			<button id="btnDelMember" class="btn btn-grey btn-cross"><span></span>删除公文</button> 
+            <button id="btnAddDoc" class="btn-icon btn-orange btn-check"><span></span>标记为已读</button> 
+			<button id="btnDelMember" class="btn btn-grey btn-remove"><span></span>删除公文</button> 
           </div>
           <table class="data display">
             <thead>
