--- a/src/documentMgr/recieveFiled.html
+++ b/src/documentMgr/recieveFiled.html
@@ -60,12 +60,12 @@
 <body>
   <div class="grid_10">
     <div class="box round first grid">
-      <h2 id="dTitle">公文收件箱</h2>
+      <h2 id="dTitle">接收公文归档</h2>
 
       <div class="block">
 			<div id="example_length" class="dataTables_length">
-            <button id="btnAddDoc" class="btn-icon btn-orange btn-star"><span></span>公文归档</button> 
-			<button id="btnDelMember" class="btn btn-grey btn-cross"><span></span>删除公文</button> 
+            <button id="btnAddDoc" class="btn-icon btn-grey btn-minus"><span></span>移除归档</button> 
+			<button id="btnDelMember" class="btn-icon btn-grey btn-cross"><span></span>删除公文</button> 
           </div>
           <table class="data display">
             <thead>
