--- a/src/document.html
+++ b/src/document.html
@@ -86,14 +86,14 @@
                             <ul class="submenu">
                                 <li><a onclick="navigate('recieveBox')">收件箱</a>
 <div id="example_length" class="dataTables_length" style="position: absolute;margin-top: -35px;margin-left: 100px;">
-            <button id="btnAddMember" class="btn-icon btn-teal btn-refresh"><span></span>接收公文</button> 
+            <button id="btnRefreshInBox" class="btn-icon btn-teal btn-refresh"><span></span>接收公文</button> 
         </div>
 								</li>
                                 <li><a onclick="navigate('sendBox')">发件箱</a> <div id="example_length" class="dataTables_length" style="position: absolute;margin-top: -35px;margin-left: 100px;">
-            <button id="btnAddMember" class="btn-icon btn-teal btn-plus"><span></span>添加公文</button> 
+            <button id="btnAddDoc" class="btn-icon btn-teal btn-plus"><span></span>添加公文</button> 
         </div></li>
                                 <li><a onclick="navigate('delBox')">垃圾箱</a><div id="example_length" class="dataTables_length" style="position: absolute;margin-top: -35px;margin-left: 100px;">
-            <button id="btnAddMember" class="btn-icon btn-teal btn-minus"><span></span>清空</button> 
+            <button id="btnEmpty" class="btn-icon btn-teal btn-minus"><span></span>清空</button> 
         </div> </li>
                                 <li><a onclick="navigate('recieveBoxNotRead')">未读公文</a> </li>
                             </ul>
