--- a/android/AssociationServicePlatform/www/index.html
+++ b/android/AssociationServicePlatform/www/index.html
@@ -27,15 +27,29 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
-    <ion-nav-view></ion-nav-view>
+	<ion-header-bar align-title="left" class="bar-dark">
+		<div class="h1 title">科协协会(5)</div>
+		<div class="buttons">
+		  <button class="button no-animation button-icon icon ion-android-search">
+		  </button>
+		  <button class="button no-animation button-icon icon ion-android-add">
+		  </button>
+		</div>
+	</ion-header-bar>
+	<ion-nav-view></ion-nav-view>
+	<ion-content class="has-footer">
+		<!--
+		  The views will be rendered in the <ion-nav-view> directive below
+		  Templates are in the /templates folder (but you could also
+		  have templates inline in this html file if you'd like).
+		
+		
+		
+		  <ion-nav-bar class="bar-stable">
+			  <ion-nav-back-button>
+			  </ion-nav-back-button>
+			</ion-nav-bar>-->
+	</ion-content>	
+   
   </body>
 </html>
