--- a/android/AssociationServicePlatform/www/index.html
+++ b/android/AssociationServicePlatform/www/index.html
@@ -27,21 +27,27 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
+		
+	<ion-nav-bar class="bar-positive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
 	<ion-header-bar align-title="left" class="bar-dark">
-		<div class="h1 title">科协协会(5)</div>
+		<div class="h1 title"></div>
 		<div class="buttons">
-			<div  href='#/tab/chats'>
-				 <button class="button no-animation button-icon icon ion-android-search">
+			<div>
+				<button class="button no-animation button-icon icon ion-android-search">
+				</button>
 			</div>
 		 
-		  </button>
 		  <button class="button no-animation button-icon icon ion-android-add" ng-click='add()'>
 		  </button>
 		</div>
 	</ion-header-bar>
+
 	<ion-nav-view></ion-nav-view>
-	<ion-content class="has-footer">
-		<!--
+	<!--<ion-content class="has-footer">
+		
 		  The views will be rendered in the <ion-nav-view> directive below
 		  Templates are in the /templates folder (but you could also
 		  have templates inline in this html file if you'd like).
@@ -51,8 +57,8 @@
 		  <ion-nav-bar class="bar-stable">
 			  <ion-nav-back-button>
 			  </ion-nav-back-button>
-			</ion-nav-bar>-->
-	</ion-content>	
+			</ion-nav-bar>
+	</ion-content>	-->
    
   </body>
 </html>
